# mech3ax

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  build-aarch64-apple-darwin.sh  build.rs  gamez2blend.py  mechlib2blend.py  rust-toolchain.toml  test.py  zmap2png.py
crates/anim/: Cargo.toml
crates/anim-events/: Cargo.toml
crates/anim-events/src/: common.rs  lib.rs  types.rs  utils.rs
crates/anim-events/src/events/: call_object_connector.rs  control_flow.rs  delta.rs  e01_sound.rs  e02_sound_node.rs  e03_effect.rs  e05_light_animation.rs  e06_object_active_state.rs  e07_object_translate_state.rs  e08_object_scale_state.rs  e09_object_rotate_state.rs  e11_object_motion_from_to.rs  e13_object_opacity_state.rs  e14_object_opacity_from_to.rs  e15_object_add_child.rs  e16_object_delete_child.rs  e17_object_cycle_texture.rs  e18_object_connector.rs  e19_call_object_connector.rs  e20_camera_state.rs  e21_camera_from_to.rs  e22_sequence.rs  e24_call_animation.rs  e25_stop_animation.rs  e26_animation.rs  e28_fog_state.rs  e30_loop.rs  e31_control_flow.rs  e35_callback.rs  e36_fbfx_color_from_to.rs  e37_fbfx_csinwave_from_to.rs  e39_anim_verbose.rs  e41_detonate_weapon.rs  light_animation.rs  light_state.rs  mod.rs  object_connector.rs  object_motion_si_script.rs  object_scale_state.rs  utils.rs
crates/anim-events/src/mw/: mod.rs  read.rs  write.rs
crates/anim-events/src/pm/: mod.rs  read.rs  write.rs
crates/anim-events/src/rc/: read.rs  write.rs
crates/anim-events/src/si_script/: mod.rs  read.rs  write.rs
crates/anim-names/: Cargo.toml  build.rs
crates/anim-names/data/: mw_anim_list.rs  mw_anim_names.rs  mw_anim_root_names.rs  pm_anim_list.rs  pm_anim_names.rs  pm_anim_root_names.rs  rc_anim_list.rs  rc_anim_names.rs  rc_anim_root_names.rs
crates/anim-names/src/: lib.rs  tests.rs
crates/anim-names/src/mw/: mod.rs  tests.rs
crates/anim-names/src/pm/: mod.rs  tests.rs
crates/anim-names/src/rc/: mod.rs  tests.rs
crates/anim/src/: activation_prereq.rs  anim_def.rs  lib.rs  parse.rs  support.rs
crates/anim/src/common/: anim_list.rs  fixup.rs  mod.rs  si_script.rs
crates/anim/src/mw/: activation_prereq.rs  anim_def.rs  mod.rs  parse.rs  support.rs
crates/anim/src/pm/: mod.rs
crates/anim/src/rc/: mod.rs
crates/anim/src/sequence_event/: animation.rs  call_animation.rs  call_object_connector.rs  control_flow.rs  detonate_weapon.rs  fbfx_color_from_to.rs  fog_state.rs  light_animation.rs  light_state.rs  (+17 more)
crates/api-types/: Cargo.toml
crates/api-types/src/: archive.rs  common.rs  image.rs  interp.rs  lib.rs  messages.rs  motion.rs  saves.rs  size.rs  zmap.rs
crates/common/: Cargo.toml
crates/common/src/: errors.rs  lib.rs  light.rs  rename.rs
crates/gamez/: Cargo.toml
crates/gamez/src/: lib.rs
crates/image/: Cargo.toml
crates/image/src/: lib.rs  read.rs  textures.rs  write.rs
crates/interp/: Cargo.toml
crates/interp/src/: interp.rs  lib.rs  read.rs  tests.rs  write.rs
crates/lib/: Cargo.toml
crates/lib/src/: buffer.rs  callbacks.rs  error.rs  lib.rs  panic.rs  read.rs  wave.rs  write.rs
crates/mech3ax/: Cargo.toml  build.rs
crates/mech3ax-anim/: Cargo.toml
crates/mech3ax-anim/src/: activation_prereq.rs  anim_def.rs  lib.rs  parse.rs  support.rs  types.rs
crates/mech3ax-api-types/: Cargo.toml
crates/mech3ax-api-types/src/: archive.rs  helpers.rs  image.rs  interp.rs  lib.rs  messages.rs  motion.rs  saves.rs  serde.rs  size.rs  types.rs  zmap.rs
crates/mech3ax-archive/: Cargo.toml  build.rs
crates/mech3ax-archive/src/: archive.rs  crc32.rs  lib.rs
crates/mech3ax-common/: Cargo.toml
crates/mech3ax-common/src/: io_ext.rs  lib.rs  light.rs  serde.rs
crates/mech3ax-gamez/: Cargo.toml
crates/mech3ax-gamez/src/: lib.rs  materials.rs  mechlib.rs  mesh.rs
crates/mech3ax-image/: Cargo.toml
crates/mech3ax-image/src/: lib.rs  textures.rs
crates/mech3ax-interp/: Cargo.toml
crates/mech3ax-interp/src/: interp.rs  lib.rs  rfc3339.rs  tests.rs
crates/mech3ax-lib/: Cargo.toml
crates/mech3ax-lib/src/: lib.rs  read.rs  v1.rs  wave.rs  write.rs
crates/mech3ax-messages/: Cargo.toml
crates/mech3ax-messages/src/: bin.rs  lib.rs  message_table.rs  read.rs  size.rs  string_table.rs  zloc.rs
crates/mech3ax-metadata-gen/: Cargo.toml
crates/mech3ax-metadata-gen/src/: csharp_type.rs  enums.rs  fields.rs  main.rs  module_path.rs  options.rs  resolver.rs  structs.rs  templates.rs  types.rs  unions.rs
crates/mech3ax-metadata-proc-macro/: Cargo.toml
crates/mech3ax-metadata-proc-macro/src/: attr_parsing.rs  enums.rs  lib.rs  object.rs  structs.rs  type_generation.rs  type_parsing.rs  unions.rs
crates/mech3ax-motion/: Cargo.toml
crates/mech3ax-motion/src/: lib.rs  motion.rs
crates/mech3ax-nodes/: Cargo.toml
crates/mech3ax-nodes/src/: flags.rs  lib.rs  math.rs  types.rs
crates/mech3ax-reader/: Cargo.toml
crates/mech3ax-reader/src/: lib.rs  reader.rs
crates/mech3ax-saves/: Cargo.toml
crates/mech3ax-saves/src/: activation.rs  header.rs  lib.rs
crates/mech3ax-version/: Cargo.toml  build.rs
crates/mech3ax-version/src/: lib.rs
crates/mech3ax-zmap/: Cargo.toml
crates/mech3ax-zmap/src/: lib.rs  read.rs  write.rs
crates/mech3ax/src/: read.rs  write.rs
crates/messages/: Cargo.toml
crates/messages/src/: bin.rs  lib.rs  message_table.rs  read.rs  size.rs  string_table.rs  zloc.rs
lib/: Cargo.toml  build.rs
lib/src/: archive.rs  assert.rs  image.rs  io_ext.rs  lib.rs  mechlib.rs  mesh.rs  messages.rs  motion.rs  reader.rs  serde.rs  string.rs  textures.rs  types.rs
lib/src/anim/: anim_def.rs  parse.rs  support.rs
lib/src/gamez/: materials.rs  meshes.rs  mod.rs  nodes.rs
lib/src/nodes/: camera.rs  empty.rs  flags.rs  math.rs  node.rs  object3d.rs  types.rs  window.rs  world.rs
lib/src/sequence_event/: animation.rs  call_object_connector.rs  detonate_weapon.rs  fbfx_color_from_to.rs  fog_state.rs  mod.rs  object_active_state.rs  object_cycle_texture.rs  object_motion.rs  object_motion_si_script.rs  object_opacity_state.rs  object_translate_state.rs  parse.rs  types.rs  utils.rs
(+877 files in other folders)
