[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
# categories
# description
# documentation
edition = "2021"
# exclude
# homepage
# include
# keywords
# license
# license-file
publish = false
# readme
# repository
# rust-version
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0"
bitflags = "1.3"
image = { version = "0.23", default-features = false, features = ["png"] }
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"

# api types only
base64 = "0.13"
# common only
thiserror = "1.0"
# metadata gen only
heck = "0.4"
tera = "1.16"
# cli only
clap = { version = "4.0", default-features = false, features = ["std", "derive", "color", "help", "usage", "error-context"] }
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
# proc macro only
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.dev]
opt-level = 1
panic = "unwind"

[profile.release]
opt-level = 3
panic = "unwind"
lto = true
# the Windows build breaks when this is enabled
# codegen-units = 1
