[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
# categories
# description
# documentation
edition = "2021"
# exclude
# homepage
# include
# keywords
# license
# license-file
publish = false
# readme
# repository
# rust-version
version = "0.0.0"

[workspace.dependencies]
anyhow = "1.0"
bitflags = "2.4"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
num-derive = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_test = "1.0"
time = "0.3"

# api types only
base64 = "0.21"
# common only
thiserror = "1.0"
# metadata gen only
heck = "0.4"
tera = "1.19"
# cli only
clap = { version = "4.5", default-features = false, features = ["std", "derive", "color", "help", "usage", "error-context"] }
env_logger = { version = "0.11", default-features = false, features = ["auto-color", "humantime"] }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
# proc macro only
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.dev]
opt-level = 1
panic = "unwind"

[profile.release]
opt-level = 3
panic = "unwind"
lto = true
# the Windows build breaks when this is enabled
# codegen-units = 1
