[package]
name = "mech3rs"
version = "0.3.2"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
publish = false

autoexamples = false
autobenches = false
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.3"
chrono = { version = "0.4.15", features = ["serde"] }
pelite = "0.9.0"
encoding = "0.2.33"
image = {version = "0.23.8", default-features = false, features = ["png"] }
bitflags = "1.0"
num-traits = "0.2"
num-derive = "0.3"
log = "0.4"
simple_logger = "1.9.0"

[dev-dependencies]
matches = "0.1.8"

[lib]
doctest = false
