[package]
name = "mech3ax-anim-events"
authors.workspace = true
edition.workspace = true
publish.workspace = true
version.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bytemuck.workspace = true
log.workspace = true

mech3ax-anim-names = { path = "../anim-names" }
mech3ax-api-types = { path = "../api-types" }
mech3ax-common = { path = "../common" }
mech3ax-types = { path = "../types" }
