[package]
name = "mech3ax-api-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
base64.workspace = true
bytemuck.workspace = true
serde.workspace = true

mech3ax-metadata-proc-macro = { path = "../metadata-proc-macro" }
mech3ax-metadata-types = { path = "../metadata-types" }
mech3ax-types = { path = "../types" }
mech3ax-timestamp = { path = "../timestamp" }

[dev-dependencies]
serde_json.workspace = true
serde_test.workspace = true
mech3ax-exchange = { path = "../exchange" }
