[package]
name = "mech3ax-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
num-traits.workspace = true

mech3ax-api-types = { path = "../api-types" }
mech3ax-debug = { path = "../debug" }
