[package]
name = "mech3ax-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false
test = false

[dependencies]
bitflags.workspace = true
image = { workspace = true, default-features = false }
log.workspace = true
num-traits.workspace = true

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-debug = { path = "../mech3ax-debug" }
mech3ax-pixel-ops = { path = "../mech3ax-pixel-ops" }
