[package]
name = "mech3ax-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false
test = false

[dependencies]
bytemuck.workspace = true
image = { workspace = true, default-features = false }
log.workspace = true

mech3ax-api-types = { path = "../api-types" }
mech3ax-common = { path = "../common" }
mech3ax-pixel-ops = { path = "../pixel-ops" }
mech3ax-types = { path = "../types" }
