[package]
name = "mech3ax-interp"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bytemuck.workspace = true
log.workspace = true

mech3ax-api-types = { path = "../api-types" }
mech3ax-common = { path = "../common" }
mech3ax-types = { path = "../types" }
mech3ax-timestamp = { path = "../timestamp" }
