[package]
name = "mech3ax-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

# description = "mech3ax converts assets from the 1998 MechWarrior 3 game to modern formats and back"
# readme = "README.md"
# license-file = "../LICENSE"
# repository = "https://github.com/TerranMechworks/mech3ax"
# keywords = ["cli", "MechWarrior", "reverse engineering"]
# categories = ["game-development", "parser-implementations"]

autoexamples = false
autobenches = false

[lib]
doctest = false
name = "mech3ax"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true

mech3ax-anim = { path = "../anim" }
mech3ax-api-types = { path = "../api-types" }
mech3ax-archive = { path = "../archive" }
mech3ax-common = { path = "../common" }
mech3ax-exchange = { path = "../exchange" }
mech3ax-gamez = { path = "../gamez" }
mech3ax-image = { path = "../image" }
mech3ax-interp = { path = "../interp" }
mech3ax-messages = { path = "../messages" }
mech3ax-motion = { path = "../motion" }
mech3ax-reader = { path = "../reader" }
mech3ax-zmap = { path = "../zmap" }
