[package]
name = "mech3ax-api-types"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
base64 = "0.13"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.5", features = ["formatting", "parsing"] }

[dev-dependencies]
serde_json = "1.0"
