[package]
name = "mech3ax-api-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
base64 = "0.13"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.5", features = ["formatting", "parsing"] }

mech3ax-metadata-proc-macro = { path = "../mech3ax-metadata-proc-macro" }
mech3ax-metadata-types = { path = "../mech3ax-metadata-types" }

[dev-dependencies]
serde_json = "1.0"
