[package]
name = "mech3ax-archive"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }

mech3ax-common = { path = "../mech3ax-common" }
mech3ax-crc32 = { path = "../mech3ax-crc32" }

[lib]
doctest = false
