[package]
name = "mech3ax-common"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags = "1.0"
num-traits = "0.2"
thiserror = "1.0"

mech3ax-api-types = { path = "../mech3ax-api-types" }

[dev-dependencies]
matches = "0.1.8"
