[package]
name = "mech3ax-common"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags.workspace = true
num-traits.workspace = true
thiserror.workspace = true

mech3ax-api-types = { path = "../mech3ax-api-types" }

[dev-dependencies]
matches = "0.1.8"
