[package]
name = "mech3ax-gamez"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bitflags = "1.0"
num-traits = "0.2"
num-derive = "0.3"

mech3ax-common = { path = "../mech3ax-common" }

[lib]
doctest = false
