[package]
name = "mech3ax-image"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
image = {version = "0.23.13", default-features = false, features = ["png"] }
bitflags = "1.0"
num-traits = "0.2"
num-derive = "0.3"

mech3ax-common = { path = "../mech3ax-common" }

[lib]
doctest = false
