[package]
name = "mech3ax-image"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false
test = false

[dependencies]
bitflags = "1.0"
image = { version = "0.23", default-features = false }
num-traits = "0.2"
log = "0.4"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-pixel-ops = { path = "../mech3ax-pixel-ops" }
