[package]
name = "mech3ax-image"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false
test = false

[dependencies]
bitflags = "1.0"
image = { version = "0.23", default-features = false }
num-traits = "0.2"
log = "0.4"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-debug = { path = "../mech3ax-debug" }
mech3ax-pixel-ops = { path = "../mech3ax-pixel-ops" }
