[package]
name = "mech3ax-interp"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3.5", features = ["formatting", "parsing"] }

mech3ax-common = { path = "../mech3ax-common" }

[dev-dependencies]
serde_json = "1.0"

[lib]
doctest = false
