[package]
name = "mech3ax-interp"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
time = "0.3.5"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
