[package]
name = "mech3ax-lib"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
description = "mech3ax converts assets from the 1998 MechWarrior 3 game to modern formats and back"
readme = "README.md"
license-file = "../LICENSE"
repository = "https://github.com/TerranMechworks/mech3ax"
keywords = ["cli", "MechWarrior", "reverse engineering"]
categories = ["game-development", "parser-implementations"]
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false
name = "mech3ax"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow = "1.0"
image = { version = "0.23", default-features = false, features = ["png"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

mech3ax-anim = { path = "../mech3ax-anim" }
mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-archive = { path = "../mech3ax-archive" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-gamez = { path = "../mech3ax-gamez" }
mech3ax-image = { path = "../mech3ax-image" }
mech3ax-interp = { path = "../mech3ax-interp" }
mech3ax-messages = { path = "../mech3ax-messages" }
mech3ax-motion = { path = "../mech3ax-motion" }
mech3ax-reader = { path = "../mech3ax-reader" }
