[package]
name = "mech3ax-lib"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

# description = "mech3ax converts assets from the 1998 MechWarrior 3 game to modern formats and back"
# readme = "README.md"
# license-file = "../LICENSE"
# repository = "https://github.com/TerranMechworks/mech3ax"
# keywords = ["cli", "MechWarrior", "reverse engineering"]
# categories = ["game-development", "parser-implementations"]

autoexamples = false
autobenches = false

[lib]
doctest = false
name = "mech3ax"
crate-type = ["staticlib", "cdylib"]

[dependencies]
anyhow.workspace = true
image.workspace = true
serde.workspace = true
serde_json.workspace = true

mech3ax-anim = { path = "../mech3ax-anim" }
mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-archive = { path = "../mech3ax-archive" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-gamez = { path = "../mech3ax-gamez" }
mech3ax-image = { path = "../mech3ax-image" }
mech3ax-interp = { path = "../mech3ax-interp" }
mech3ax-messages = { path = "../mech3ax-messages" }
mech3ax-motion = { path = "../mech3ax-motion" }
mech3ax-reader = { path = "../mech3ax-reader" }
