[package]
name = "mech3ax-messages"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
pelite = "0.9.0"
# encoding = "0.2.33"
log = "0.4"

mech3ax-common = { path = "../mech3ax-common" }
mech3ax-encoding = { path = "../mech3ax-encoding" }

[lib]
doctest = false
