[package]
name = "mech3ax-messages"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags = "1.0"
log = "0.4"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-encoding = { path = "../mech3ax-encoding" }
