[package]
name = "mech3ax-metadata-gen"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2021"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
heck = "0.4"
tera = "1.16"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-metadata-proc-macro = { path = "../mech3ax-metadata-proc-macro" }
mech3ax-metadata-types = { path = "../mech3ax-metadata-types" }
