[package]
name = "mech3ax-metadata-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
heck = "0.4"
tera = "1.16"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-metadata-proc-macro = { path = "../mech3ax-metadata-proc-macro" }
mech3ax-metadata-types = { path = "../mech3ax-metadata-types" }
