[package]
name = "mech3ax-metadata-gen"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[dependencies]
heck.workspace = true
serde.workspace = true
tera.workspace = true

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-metadata-proc-macro = { path = "../mech3ax-metadata-proc-macro" }
mech3ax-metadata-types = { path = "../mech3ax-metadata-types" }
