[package]
name = "mech3ax-metadata-proc-macro"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
proc-macro = true
doctest = false

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"

mech3ax-metadata-types = { path = "../mech3ax-metadata-types" }
