[package]
name = "mech3ax-nodes"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags = "1.0"
log = "0.4"
num-derive = "0.3"
num-traits = "0.2"

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
mech3ax-debug = { path = "../mech3ax-debug" }
