[package]
name = "mech3ax-reader"
version = "0.0.0"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
publish = false

autoexamples = false
autobenches = false

[dependencies]
serde_json = "1.0"

mech3ax-common = { path = "../mech3ax-common" }

[lib]
doctest = false
test = false
