[package]
name = "mech3ax-saves"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false
test = false

[dependencies]
log.workspace = true
num-traits.workspace = true

mech3ax-api-types = { path = "../mech3ax-api-types" }
mech3ax-common = { path = "../mech3ax-common" }
