[package]
name = "mech3ax"
version = "0.4.1"
authors = ["Toby Fleming <tobywf@users.noreply.github.com>"]
edition = "2018"
description = "mech3ax converts assets from the 1998 MechWarrior 3 game to modern formats and back"
readme = "README.md"
license-file = "../LICENSE.txt"
repository = "https://github.com/TerranMechworks/mech3ax"
keywords = ["cli", "MechWarrior", "reverse engineering"]
categories = ["game-development", "parser-implementations"]
publish = false

autoexamples = false
autobenches = false
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "3.0.0-beta.5"
zip = { version = "0.5", default-features = false, features = ["deflate"] }
image = {version = "0.23.14", default-features = false, features = ["png"] }
env_logger = { version = "0.9", default-features = false, features = ["atty", "humantime"] }
anyhow = "1.0"

mech3ax-common = { path = "../mech3ax-common" }
mech3ax-anim = { path = "../mech3ax-anim" }
mech3ax-archive = { path = "../mech3ax-archive" }
mech3ax-gamez = { path = "../mech3ax-gamez" }
mech3ax-image = { path = "../mech3ax-image" }
mech3ax-interp = { path = "../mech3ax-interp" }
mech3ax-messages = { path = "../mech3ax-messages" }
mech3ax-motion = { path = "../mech3ax-motion" }
mech3ax-reader = { path = "../mech3ax-reader" }

[build-dependencies]
vergen = "3.2.0"

[lib]
doctest = false
name = "mech3ax"
path = "src/lib.rs"
crate-type = ["staticlib", "cdylib"]

[[bin]]
path = "src/bin/unzbd/main.rs"
name = "unzbd"
test = false

[[bin]]
path = "src/bin/rezbd/main.rs"
name = "rezbd"
test = false
