[package]
name = "mech3ax-messages"
version.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

autoexamples = false
autobenches = false

[lib]
doctest = false

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
log.workspace = true

mech3ax-api-types = { path = "../api-types" }
mech3ax-common = { path = "../common" }
mech3ax-encoding = { path = "../encoding" }
mech3ax-types = { path = "../types" }
